Release notes for OpenLava versions

4.0beta2
============

-- In the fairshare scheduling if a user has jobs that enforce a user group
   and jobs that don't, schedule both types of jobs with -G jobs first.
-- Implement a set of fixes related to fairshare job selection which were
   causing the scheduler to slowly dispatch jobs even if slots were available
   and set incomplete pending reasons.
-- Fixed slot based and resource preemption job replay bug. Fixed slot based
   preemption memory leak, and man pages.
-- Implement a slot based queue preemption in which jobs are suspended,
   instead of requeued.
-- If the MBD does not set the pending reasons for a job print:
   "System is unable to set pending reason for job;" in the bjobs -p
   output instead of blank or meaningless string.
-- badmin ckconfig checks the ownership and permission of work/logdir.
-- In bqueues -l output change the keyword RAN to STARTED to reflect
   the number of started jobs and not only ran.
-- lsid prints the 4.0beta2 identification for the current branch.
-- Implement the decay slot factor for HIST_MINUTES.

4.0beta1
========
-- Fix mbatchd core dump that happens if jobs are submitted with -t option
   of bsub and the job is terminated while pending.
-- Added bjobs -o to support custom output fields
-- Added bjobs -cwd to specify the job current working directory
-- Implement MBD_DEDICATED_RESOURCES in lsf.conf. These are host based boolean
   resources that must be defined in lsf.cluster file. A job must explicitly
   specify a dedicated resource to get allocated the host with that resource.
-- Fix a typo in lsb.queues.in, preemption was spelled with double t.
-- Fix compatibility probelms when replaying older lsb.events.
-- Fix the XDR error in the badmin qclose command.
-- Add man page for $LSF_ENVDIR/openlava
-- Add a template file $LSF_ENVDIR/limits.sh
-- Fixed sbatchd compile error on RHEL 5 because glibc lacks CPU_COUNT.