@@ -3,6 +3,10 @@ Release notes for OpenLava versions
 4.0beta2
 ============
 
+-- Implement a new lsf.conf variable named LSB_DEFAULT_USER_GROUP="group name".
+   If this variable is specified than jobs that do not specify -G at submission
+   time will be assigned LSB_DEFAULT_USER_GROUP as group. This group must be
+   configured among valid groups in a fairshare queue.
 -- In the fairshare scheduling if a user has jobs that enforce a user group
    and jobs that don't, schedule both types of jobs with -G jobs first.
 -- Implement a set of fixes related to fairshare job selection which were
